--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
 
 body {
     background-position: center;
-    background-image: url("The.jpg");
+    background-image: url("bear.PNG");
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
@@ -165,12 +165,58 @@ a:hover{
     background: var(--second-color);
 }
 
+.container .registration{
+    display: none;
+}
+
+#check:checked ~ .registration {
+    display: block;
+}
+
+#check {
+    display: none;
+}
+
+.container .form{
+    padding: 2rem;
+}
+
+.form header{
+    font-size: 2rem;
+    font-weight: 500;
+    text-align: center;
+    margin-bottom: 1.5rem;
+}
+
+.form input{
+    font-size: 16px;
+    height: 55px;
+    width: 100%;
+    padding: 0 15px;
+    margin-bottom: 1.3rem;
+    border: 2px solid var(--primary-color);
+    border-radius: 30px;
+}
+
+
+
 .signup {
     text-align: center;
+
+}
+
+.signup label {
+    color:#ec4848
+}
+
+.signup label:hover {
+    text-decoration: underline;
+    cursor: pointer;
 }
 
 .signup a {
     font-weight: 500;
+    cursor: pointer;
 }
 
 @media only screen and(max-width: 564px){
@@ -181,4 +227,8 @@ a:hover{
     .login_container{
         padding:7.5em 1.5em 4em 1.5em;
     }
+}
+
+.register{
+    display: none;
 }
